src/app/[locale]/Welcome.module.css
.root {
  padding-top: rem(80px);
  padding-bottom: rem(80px);
}

.inner {
  position: relative;
}

.image {
  position: absolute;
  opacity: 0.75;
  color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
  font-size: 12vw;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-family:
    Greycliff CF,
    var(--mantine-font-family);
  font-weight: 900;
  text-transform: uppercase;
  text-align: center;
}

.content {
  padding-top: rem(220px);
  position: relative;
  z-index: 1;
}

.title {
  font-family:
    Greycliff CF,
    var(--mantine-font-family);
  text-align: center;
  font-weight: 900;
  font-size: rem(38px);

  @media (max-width: $mantine-breakpoint-sm) {
    font-size: rem(32px);
  }
}

.description {
  text-align: center;
  max-width: rem(540px);
  margin: auto;
  margin-top: var(--mantine-spacing-xl);
  margin-bottom: calc(var(--mantine-spacing-xl) * 1.5);
}

